--- a/parameters-acme.yaml
+++ b/parameters-acme.yaml
@@ -6,16 +6,14 @@ conductor:
     wan:
       address: 10.128.1.128/16
       gateway: 10.128.1.1
-    ha_sync:
-      address: 172.28.1.128/16
   passwords:
     admin: secret
     root: high.secret
     t128: very.secret
   ssh_keys:
-    root: file:id_rsa_acme.pub
-    t128: file:id_rsa_acme.pub
-    netconf: file:id_rsa_acme.pub
+    root: file:id_rsa_root_acme.pub
+    t128: file:id_rsa_t128_acme.pub
+    netconf: file:id_rsa_netconf_acme.pub
   # config_templates are searched in directory "config_templates"
   config_template: conductor.j2
   gps: +51.061943+010.364245/
@@ -33,6 +31,5 @@ headend:
     root: high.secret
     t128: very.secret
   ssh_keys:
-    root: file:id_rsa_acme.pub
-    t128: file:id_rsa_acme.pub
+    root: file:id_rsa_root_acme.pub
   config_template: router.j2
